[gd_scene load_steps=4 format=3 uid="uid://b6x8v0j6y5n3q"]

[ext_resource type="Script" path="res://ui/camera_consciousness_overlay/consciousness_meter.gd" id="1_2k4m3"]
[ext_resource type="Texture2D" uid="uid://c8q6v4y2n3m1p" path="res://assets/icons/consciousness/level_0.png" id="2_3k4m3"]
[ext_resource type="Shader" path="res://shaders/glow.gdshader" id="3_4k5m3"]

[node name="ConsciousnessMeter" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 200.0
script = ExtResource("1_2k4m3")

[node name="MeterBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 0.8)

[node name="GlowEffect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.4, 0.4, 0.8, 0.3)
material = ExtResource("3_4k5m3")

[node name="LevelIndicator" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
value = 50.0
show_percentage = false

[node name="LevelIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_3k4m3")
expand_mode = 1
stretch_mode = 5

[node name="LevelText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = 20.0
offset_right = 10.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1 